nginx-deploy-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: ahmedghanem/nginx:env
        imagePullPolicy: Always
        name: nginx-website
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
    volumeMounts:
    - name: nginx-pvc
      mountPath: /app
  volumes:
  - name: nginx-pvc
    persistentVolumeClaim:
      claimName: efs-claim
