ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=1600
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
  name: dev-ingress
  namespace: test

spec:
  rules:
  - host: nginx.revivesuperfoods.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /*
