nginx-ingress-internal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
#    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
#      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:604159183131:certificate/ad5c57c0-064d-4753-97b1-ae05a11611e3
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
#    alb.ingress.kubernetes.io/target-type: "ip"
#    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
  name: mon
#  namespace: elastic-system

spec:
  rules:
#  - http:
#      paths:
#      - backend:
#          serviceName: ssl-redirect
#          servicePort: use-annotation
#        path: /*



  - host: nginx.quizplus.com	
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /*
